--- a/package.json
+++ b/package.json
@@ -1,4 +1,4 @@
-{ "homepage": "http://ThomasMullaney.github.io/React-Portfolio",
+{ "homepage": "http://ThomasMullaney.github.io/React-Portolio",
   "name": "react-portfolio",
   "version": "0.1.0",
   "private": true,
